--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <li><a href="#">Eventos</a>
               <ul>
                 <li><a href="pags/ambiental.html">Ambiental</a></li>
-                <li><a href="pags/social.html">Sociais</a></li>
+                <li><a href="pags/social.html">Social</a></li>
               </ul>
             </li>
             <li><a href="#">Contato</a></li>
@@ -49,6 +49,29 @@
         </div>
       </nav> 
     </header>
+    <main>
+      <!-- Section Home -->
+      <section id="home">
+        <div class="banner"></div>
+      </section>
+      <!-- Section Sobre -->
+      <Section class="content">
+        <div class="session-about">
+          <h1>Um pouco sobre nós</h1>
+          <p>A Ong SiriEco foi idealizada a mais de 10 anos atrás, mas apénas em 2017 que foi registrada como Sirinhaém Ecológico, onde foi que iniciamos com o trabalho de ecologia que somou ao trabalho social que ja fazia-mos na cidade de Jaboatão dos Guararapes.</p>
+        </div>
+      </Section>
+      <!-- Section Eventos -->
+      <Section class="content">
+        <div>
+          <h3></h3>
+        </div>
+      </Section>
+      <!-- Section Contato -->
+      <Section class="content">
+      
+      </Section>
+    </main>
 	</div> 
 </body>
 </html>
