--- a/index.html
+++ b/index.html
@@ -63,7 +63,8 @@
       <Section class="content" id="about">
         <div class="session-about">
           <h1>Um pouco sobre nós</h1>
-          <p>A Ong SiriEco foi idealizada a mais de 10 anos atrás, mas apénas em 2017 que foi registrada como Sirinhaém Ecológico, onde foi que iniciamos com o trabalho de ecologia que somou ao trabalho social que ja fazia-mos na cidade de Jaboatão dos Guararapes.</p>
+          <p>A Ong SiriEco foi idealizada a mais de 10 anos atrás, mas apénas em 2017 que foi registrada como Sirinhaém Ecológico. A vários anos fazemos um trabalho social de distribuição de alimentos, roupas, calçados e derivados para a população mais necessitada no bairro do Socorro - Jaboatão dos Guararapes, até então nossos trabalhos e realizações eram apenas na modalidade social, mas em 2017 recebemos um convite para exercer um trabalho ecológico na cidade de Sirinhaém, onde estamos até hojé realizando vários trabalhos ecosociais. Com tudo ainda continuamos com nosso compromisso junto as famílias que acompanhamos a tantos anos, continuamos fazendo distribuição de cestas básicas, de roupas e tudo mais que conseguimos arrecadasr durante o ano,para quem sabe poder levar um pouco de conforto, esperança e quem sabe felicidade a quem a vida há de ser tão dura.</p>
+          <p>Um amigo já nos falou, que por mais que nosso trabalho seja pequeno, se conseguimos mudar a realidade de uma criança já estaremos fazendo uma grande diferença. <cite>"Podemos não mudar o mundo com nossas ações, mas ao menos estamos tentando e fazendo nossa parte"</cite></p>
         </div>
       </Section>
       <!-- Event Session -->
