--- a/index - Copia.html
+++ b/index - Copia.html
@@ -69,23 +69,28 @@
           <div class="uniao"></div>
           <p>Um amigo um dia nos falou, que por mais que nosso trabalho seja pequeno, se conseguimos mudar a realidade de uma criança já estaremos fazendo uma grande diferença.</p> 
           <p class="citacao">"Nós podemos mudar o mundo e torná-lo um lugar melhor. Está em suas mãos fazer a diferença."<cite> - (Nelson Mandela)</cite></p>
+
         </div>
       </Section>
       <!-- Event Session -->
       <Section class="content">
         <div id="events">
           <div>
-            <h1 class="session-title">Ações e Eventos</h1>
+            <h1 class="session-title">Ultimos Eventos Sociais</h1>
           </div>
           <div id="event-session">
-            <div class="photo" id="natal2019"><a href="../events"></a></div>
-            <p>Nosso lema é ajudar sem olhar a quem. Nossa vida aqui é só uma passagem, e como pessoas humanas que somos não fazemos mais do que nossa obrigação de ajudar ao próximo.</p>
-            <div class="photo" id="natal_2019"><a href="../events"></a></div>
-            <p class="coluna1">Temos um grande compromisso com o meio ambiente, afinal, temos que cuidadar do nosso planeta já que habitamos nele. Devemos achar uma forma amigável de coezistir com o planeta e progredir em harmonia com animais, plantas, a biodiversidade, com a TERRA em geral. Inumeras expécies foram estintas, biomas desapareceram, estamos forçando o nosso mundo a mudar, a adaptar-se a nós, quando na verdade nós é que deveriamos se adaptar a ele.</p>
-            <div class="photo" id="horta"></div>
-            <p>Também insentivamos o cultivo de forma sustentável, alunos nas escolas hoje aprendem o valor de cultivar o seu prórpio alimento.</p>
-            <!-- <div class="photo" id="limpezapraia"></div> -->
-            <p class="citacao">Preservem o Planeta Terra! Ele é o único que possui chocolate e livros!<cite> - Tamara Moureth</cite></p>
+            <div class="events-photo">
+              <h3>Natal da Crianças 2019</h3>
+              <div class="photo" id="natal2019"><a href="../events"></a></div>
+            </div>
+            <div class="events-photo">
+              <h3>Natal Solidário 2019</h3>
+              <div class="photo" id="natalsolidario2019"><a href="../events"></a></div>
+            </div>
+            <div class="events-photo">
+              <h3>São João Solidário 2019</h3>
+              <div class="photo" id="pascoa2019"><a href="../events"></a></div>
+            </div>
           </div>
         </div>
       </Section>
