--- a/index.html
+++ b/index.html
@@ -83,9 +83,9 @@
             <div class="photo" id="natal_2019"><a href="../events"></a></div>
             <p class="coluna1">Temos um grande compromisso com o meio ambiente, afinal, temos que cuidadar do nosso planeta já que habitamos nele. Devemos achar uma forma amigável de coezistir com o planeta e progredir em harmonia com animais, plantas, a biodiversidade, com a TERRA em geral. Inumeras expécies foram estintas, biomas desapareceram, estamos forçando o nosso mundo a mudar, a adaptar-se a nós, quando na verdade nós é que deveriamos se adaptar a ele.</p>
             <div class="photo" id="horta"></div>
-            <p>Também insentivamos o cultivo de forma sustentável, alunos nas escolas hoje aprendem o valor de cultivar o seu prórpio alimento.</p>
+            <p>Também insentivamos o cultivo de forma sustentável, alunos nas escolas hoje aprendem o valor de cultivar o seu prórpio alimento.<p class="citacao">Preservem o Planeta Terra! Ele é o único que possui chocolate e livros!<cite> - Tamara Moureth</cite></p></p>
             <!-- <div class="photo" id="limpezapraia"></div> -->
-            <p class="citacao">Preservem o Planeta Terra! Ele é o único que possui chocolate e livros!<cite> - Tamara Moureth</cite></p>
+            
           </div>
         </div>
       </Section>
