--- a/index.html
+++ b/index.html
@@ -79,13 +79,11 @@
           </div>
           <div id="event-session">
             <div class="photo" id="natal2019"><a href="../events"></a></div>
-            <p>Nosso lema é ajudar sem olhar a quem. Nossa vida aqui é só uma passagem, e como pessoas humanas que somos não fazemos mais do que nossa obrigação de ajudar ao próximo.</p>
+            <p>Nosso lema é ajudar sem olhar a quem. Mais vale um sorriso estampado no rosto a olhares deprimentes de tristeza e angustia. Isso é o que tentamos levar a alegria, o amor, a esperança de que o hoje e o amanhã poderá ser melhor do que ontem. Nossa vida aqui é só uma passagem, e como pessoas humanas que somos não fazemos mais do que nossa obrigação de ajudar ao próximo.</p>
             <div class="photo" id="natal_2019"><a href="../events"></a></div>
             <p class="coluna1">Temos um grande compromisso com o meio ambiente, afinal, temos que cuidadar do nosso planeta já que habitamos nele. Devemos achar uma forma amigável de coezistir com o planeta e progredir em harmonia com animais, plantas, a biodiversidade, com a TERRA em geral. Inumeras expécies foram estintas, biomas desapareceram, estamos forçando o nosso mundo a mudar, a adaptar-se a nós, quando na verdade nós é que deveriamos se adaptar a ele.</p>
             <div class="photo" id="horta"></div>
-            <p>Também insentivamos o cultivo de forma sustentável, alunos nas escolas hoje aprendem o valor de cultivar o seu prórpio alimento.<p class="citacao">Preservem o Planeta Terra! Ele é o único que possui chocolate e livros!<cite> - Tamara Moureth</cite></p></p>
-            <!-- <div class="photo" id="limpezapraia"></div> -->
-            
+            <p>Também insentivamos o cultivo de forma sustentável, alunos nas escolas hoje aprendem o valor de cultivar o seu prórpio alimento.<p class="citacao">Preservem o Planeta Terra! Ele é o único que possui chocolate e livros!<cite> - Tamara Moureth</cite></p></p>            
           </div>
         </div>
       </Section>
@@ -104,7 +102,7 @@
       </section>
     </main>
     <footer>
-      <p> 2019 @ FelipeCosta - Todos os direitos reservados</p>
+      <p> 2020 @ ONGSiriEco - Todos os direitos reservados</p>
     </footer>
 	</div> 
 </body>
