--- a/index.html
+++ b/index.html
@@ -79,11 +79,11 @@
           </div>
           <div id="event-session">
             <div class="photo" id="natal2019"><a href="../events"></a></div>
-            <p>Nosso lema é ajudar sem olhar a quem. Mais vale um sorriso estampado no rosto a olhares deprimentes de tristeza e angustia. Isso é o que tentamos levar a alegria, o amor, a esperança de que o hoje e o amanhã poderá ser melhor do que ontem. Nossa vida aqui é só uma passagem, e como pessoas humanas que somos não fazemos mais do que nossa obrigação de ajudar ao próximo.</p>
+            <p>O nosso lema é ajudar sem olhar a quem. Mais vale um sorriso estampado no rosto a olhares deprimentes de tristeza e angustia. Isso é o que tentamos levar a alegria, o amor, a esperança de que o hoje e o amanhã poderá ser melhor que ontem. A nossa vida aqui é só uma passagem, e como pessoas humanas que somos não fazemos mais do que a nossa obrigação de ajudar ao próximo.</p>
             <div class="photo" id="natal_2019"><a href="../events"></a></div>
-            <p class="coluna1">Temos um grande compromisso com o meio ambiente, afinal, temos que cuidadar do nosso planeta já que habitamos nele. Devemos achar uma forma amigável de coezistir com o planeta e progredir em harmonia com animais, plantas, a biodiversidade, com a TERRA em geral. Inumeras expécies foram estintas, biomas desapareceram, estamos forçando o nosso mundo a mudar, a adaptar-se a nós, quando na verdade nós é que deveriamos se adaptar a ele.</p>
+            <p class="coluna1">Temos um grande compromisso com o meio ambiente, afinal, temos que cuidar do nosso planeta já que habitamos nele. Devemos achar uma forma amigável de coexistir com o planeta e progredir em harmonia com animais, plantas, a biodiversidade, com a TERRA em geral. Inúmeras espécies foram extintas, biomas desapareceram, estamos forçando o nosso mundo a mudar, a adaptar-se a nós, quando, na verdade nós é que deveríamos se adaptar a ele.</p>
             <div class="photo" id="horta"></div>
-            <p>Também insentivamos o cultivo de forma sustentável, alunos nas escolas hoje aprendem o valor de cultivar o seu prórpio alimento.<p class="citacao">Preservem o Planeta Terra! Ele é o único que possui chocolate e livros!<cite> - Tamara Moureth</cite></p></p>            
+            <p>Também incentivamos o cultivo de plantas além do cultivo de ideias, do amor com a natureza e com o próximo de uma forma super sustentável. Alunos nas escolas hoje podem também aprender o valor de cultivar o seu próprio alimento e melhor, totalmente orgânico.<p class="citacao">Preservem o Planeta Terra! Ele é o único que possui chocolate e livros!<cite> - Tamara Moureth</cite></p></p>            
           </div>
         </div>
       </Section>
@@ -91,7 +91,7 @@
       <section class="content" id="contact">
         <h1 class="contact-title">Entre em contato</h1>
         <div>
-          <p>Mandede-nos uma mensagem, vamos adorar saber o que você tem para nos dizer</p>
+          <p>Mande-nos uma mensagem, vamos adorar saber o que você tem para nos dizer.</p>
           <form>
             <input type="text" name="name" placeholder="Seu nome">
             <input type="email" name="email" placeholder="Seu e-mail">
