--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
       </section>
     </main>
     <footer>
-      <p> 2020 @ ONGSiriEco - Todos os direitos reservados</p>
+      <p>© 2020 ONGSiriEco - Todos os direitos reservados</p>
     </footer>
 	</div> 
 </body>
